Preventing wiki text in RenderKDOM from wrapping (added horizontal scrolling for that case).

--- a/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/jquery-treeTable.css
+++ b/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/jquery-treeTable.css
@@ -16,7 +16,7 @@ table.treetable * {
 .table_text .kdom_source {
 	display: inline;
 	background-color: lightgray;
-	white-space: pre-wrap;
+	white-space: pre;
 }
 
 table.treetable td {
